fix overflowing chapter menu

--- a/static/rd-ui/src/css/sidebar.css
+++ b/static/rd-ui/src/css/sidebar.css
@@ -130,3 +130,8 @@
 .sidebar-container .button-container .sidebar-add-new:hover {
   background-color: #0f1e1e;
 }
+
+.sidebar-container [data-rbd-droppable-id="droppable"] {
+  height: initial;
+  min-height: calc(100% - 90px);
+}
